分开两个脚本